# Feed

./: .gitignore  CMakeLists.txt  Makefile  config.json  readme.md  sdkconfig  sdkconfig.1  sdkconfig.old
main/: CMakeLists.txt  config.json  core.c  core.h  ftp.c  main.c  main.c.old  main2.c  mqtt.c  mqtt.h  network.c  network.h  ota.c  storage.c  temperature.c  temperature.h  udp_logging.c  webServer.c
