idf_component_register(SRCS "main.c"
                            "utils.c"
                            "storage.c"
                            "spiffs.c"
                            "core.c"
                            "network.c"
                            "webServer.c"                            
                            "ota.c"
                            "ftp.c"
                            "mqtt.c"           
                            "udp_logging.c"
                            "temperature.c"
                       INCLUDE_DIRS ".")

